infrastructure/kubernetes/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory-prod
  labels:
    app: inventory-management
    environment: prod
